[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/main character/PlayerRB2d.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.2228, 14.6012 )

[sub_resource type="RayShape2D" id=3]

[node name="PlayerRB2d" type="RigidBody2D"]
collision_layer = 2
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )
dash_impulse = 800

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 307.827, 157.149, 12.4646, 12.149 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="GunPosition" type="Position2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="DetectorSuelo" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.4 )
shape = SubResource( 3 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
